fixed navbar z-index

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -198,7 +198,7 @@ header {
   width: 100%;
   transition: top 0.3s;
   background-color: white;
-  z-index: 1;
+  z-index: 2;
   box-shadow: 0 1px 10px rgba(0, 0, 0, 0.03);
 }
 .navbar {
